fixed top margin for main element on mobile devices, removed justify text throughout site

--- a/src/app/styles/Layout.module.sass
+++ b/src/app/styles/Layout.module.sass
@@ -1,3 +1,3 @@
 @media (max-width: 470px) // Small devices
     .main
-        margin-bottom: var(--responsive-space-l)
+        margin-top: var(--responsive-space-l)
