--- a/src/app/styles/Markdown.module.sass
+++ b/src/app/styles/Markdown.module.sass
@@ -1,3 +1,2 @@
 .markdownWrapper
     line-height: 1.5 !important
-    text-align: justify !important
